<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.root.MainActivity">

    <Button
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/yellow_while"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/Select_button"
        android:textColor="@color/red_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/countPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:textColor="@color/yellow_while"
        app:layout_constraintBottom_toTopOf="@+id/progressBarPoints"
        app:layout_constraintLeft_toLeftOf="@+id/progressBarPoints"
        app:layout_constraintRight_toRightOf="@+id/progressBarPoints" />

    <TextView
        android:id="@+id/descriptionProgress"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/press_start_2p"
        android:orientation="vertical"
        android:text="@string/your_progress"
        android:textAlignment="center"
        android:textColor="@color/yellow_while"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/progressBarPoints"
        app:layout_constraintRight_toRightOf="@+id/progressBarPoints"
        app:layout_constraintTop_toBottomOf="@+id/progressBarPoints" />

    <ProgressBar
        android:id="@+id/progressBarPoints"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="72dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-32dp"
        android:layout_marginBottom="82dp"
        android:max="10"
        android:progressDrawable="@drawable/vertical_prograssbar"
        app:layout_constraintBottom_toTopOf="@+id/select_button"
        app:layout_constraintRight_toRightOf="@+id/select_button" />

    <ImageButton
        android:id="@+id/shop_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/cart"
        android:contentDescription="@string/shop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/location_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/ic_location"
        android:contentDescription="@string/location"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/shop_button" />

    <ImageButton
        android:id="@+id/update_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_update"
        android:contentDescription="@string/update"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/shop_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/money"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:fontFamily="@font/press_start_2p"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/health" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="68dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:max="100"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/red_white"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="5dp"
            android:fontFamily="@font/press_start_2p"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/money"
            app:layout_constraintLeft_toRightOf="@+id/container_health"
            app:layout_constraintRight_toLeftOf="@+id/exp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/press_start_2p"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/ic_r"
            app:layout_constraintLeft_toRightOf="@+id/money"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>